--- a/main.html
+++ b/main.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head> 
-    <title>한국콘크리트시험원</title>
+    <title>한국보일러공업협동조합</title>
 
-	<link rel="shortcut icon" href="http://kctl.or.kr/KCTL/Image/Favicon/favicon.ico"/>
-	   
+	<link rel="shortcut icon" href="./images/favicon.ico"/>	  
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,27 +13,30 @@
 	<script type="text/javascript" src="../../Plugin/JQuery/js/jquery-migrate-1.2.1.min.js"></script>    
 	<script type="text/javascript" src="../../Plugin/JQuery/js/jquery-ui.js"></script>
 	<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+	<script type="text/javascript" src="ui.js"></script>
+	<link rel="stylesheet" href="./css/common.css" />
+	<link rel="stylesheet" href="./css/contents.css" />
 </head>
 <body>
 	<div id="wrap">
 		<header id="header">
 			<div class="contents">
 				<h1 class="logo">
-					<a href="#"><img src="./images/h_logo.png" alt=""></a>
+					<a href="./main.html"><img src="./images/h_logo.png" alt=""></a>
 				</h1>				
 				<div class="menuList">
 					<ul>
 						<li>
-							<a href="#">조합소개</a>
+							<a href="./sub1.html">조합소개</a>
 						</li>
 						<li>
-							<a href="#">조합원사</a>
+							<a href="./sub2.html">조합원사</a>
 						</li>
 						<li>
-							<a href="#">정보광장</a>
+							<a href="./sub3.html">정보광장</a>
 						</li>
 						<li>
-							<a href="#">사업정보</a>
+							<a href="./sub4_1.html">사업정보</a>
 						</li>
 						<li>
 							<a href="#">인트라넷</a>
@@ -237,139 +239,6 @@
 </body>
 </html>
 
-<style>
-	/**
-	태그 초기화
-	**/
-
-	@font-face {font-family: 'NotoSans';font-weight: 300;font-style: normal;src: url(./font/NotoSansCJKkr-Light.woff) format('woff');}
-	@font-face {font-family: 'NotoSans';font-weight: 400;font-style: normal;src: url(./font/NotoSansCJKkr-Regular.woff) format('woff');}
-	@font-face {font-family: 'NotoSans';font-weight: 500;font-style: normal;src: url(./font/NotoSansCJKkr-Medium.woff) format('woff');}
-	@font-face {font-family: 'NotoSans';font-weight: 700;font-style: normal;src: url(./font/NotoSansCJKkr-Bold.woff) format('woff');}
-	@font-face {font-family: 'Gmarket Sans';font-weight: 300;font-style: normal;src: url(./font/GmarketSansLight.woff) format('woff');}
-	@font-face {font-family: 'Gmarket Sans';font-weight: 500;font-style: normal;src: url(./font/GmarketSansMedium.woff) format('woff');}
-	@font-face {font-family: 'Gmarket Sans';font-weight: 700;font-style: normal;src: url(./font/GmarketSansBold.woff) format('woff');}
-
-	html, body{width:100%;height:100%;}
-	body{margin:0;font-family:'NotoSans','맑은고딕',sans-serif;font-weight:400;font-size:16px;line-height:22px;color:#444;}
-	div, iframe, h1, h2, h3, h4, h5, h6, p, button, abbr, address, blockquote, q, sub, sup, dl, dt, dd, ol, ul, li, fieldset, form, legend, table, caption, tbody, tfoot, thead, tr, th, td, hr{padding:0;margin:0;}
-	header, footer, section, article, aside, nav, hgroup, details, menu, figure, figcaption{display:block;padding:0;margin:0;}
-	h1, h2, h3, h4, h5, h6{font-weight:400;line-height:1;}
-	ol, ul, li{list-style:none;}
-	table{table-layout:fixed;width:100%;border-collapse:collapse;border-spacing:0;}
-	th{font-weight:400;}
-	form, fieldset, iframe{border:0;}
-	img{border:0;vertical-align:top;font-size:0;line-height:0;}
-	button{border:0;}
-	hr{border:0;}
-	i, em, address{font-style:normal;}
-	strong, b{font-weight:500;}
-	label, button{cursor:pointer;}
-	blockquote, q{quotes:none;}
-	caption, legend{overflow:hidden;width:0;height:0;font-size:0;line-height:0;text-indent:-50000px;}
-	input, textarea, select, button, video{padding:0;font-family:'noto','맑은고딕',sans-serif;font-weight:400;font-size:14px;color:#222;vertical-align:middle;background:none;border:0;outline:none;}
-	input::-ms-clear, input::-ms-reveal{display:none;}
-	a{color:#222;text-decoration:none;outline:none;}
-	a:hover{text-decoration:none;}
-
-	.container{position:relative;width:100%;overflow:hidden;}
-	.contents{position:relative;width:1000px;margin:0 auto;}
-	.contents.mid{padding-top:30px;display:flex;align-items:revert;justify-content:space-between;}
-
-	#header{display:flex;align-items:center;height:80px;background:#fff;}
-	#header .contents{display:flex;align-items:center;justify-content:space-between;}
-	#header .logo{}
-	#header .menuList{}
-	#header .menuList li{position:relative;display:inline-block;margin-left:50px;}
-	#header .menuList li:first-child{margin-left:0;}
-	#header .menuList li a{transition:0.5s;}
-	#header .menuList li a:hover,
-	#header .menuList li a:focus{color:#ff9720;}
-	#header .mo_menu { display: none; }
-	#header.fixed { width: 100%; position: fixed; top: 0; left: 0; z-index: 10;}
-	#footer{margin-top:41px;height:114px;background:#efefef;display:flex;align-items:center;justify-content:center;flex-direction:column;}
-	#footer .contents{display:flex;align-items:center;justify-content:flex-start;}
-	#footer .fLogo{margin-right:67px;}
-	#footer .fInfo{line-height:19px;font-size:14px;color:#999;}
-	#footer .fInfo .addr{}
-	#footer .fInfo .contact{}
-	#footer .fInfo .contact span:after{content:'|';padding:0 5px;}
-	#footer .fInfo .contact span:last-child:after{content:none;}
-	#footer .fInfo .copyright{}
-
-	.mainBanner{width:100%;height:400px;background:#abcfcb;}
-	.mainBanner .mainBg{position:relative;width:100%;height:100%;background:url('./images/main_visual.png')no-repeat center / cover;}
-	.mainBanner .txtArea{display:flex;width:1000px;height:100%;margin:0 auto;align-items:center;text-align:right;justify-content:flex-end;}
-	.mainBanner .txtArea .txt{}
-	.mainBanner .txtArea .tit{line-height:46px;font-size:36px;font-weight:700;font-family:'Gmarket Sans';color:#574e44;}
-	.mainBanner .txtArea .tail{margin-top:24px;line-height:30px;font-size:20px;color:#574e44;}
-
-	.leftBtnArea li{width:200px;height:93px;background:#ff9720;border-top:1px solid #fff;}
-	.leftBtnArea li:first-child{border-top:0 none;}
-	.leftBtnArea li a{display:flex;align-items:center;justify-content:center;flex-direction:column;width:100%;height:100%;text-align:center;}
-	.leftBtnArea li a span{display:inline-block;margin-top:6px;line-height:27px;font-size:20px;color:#fff;}
-
-	.board{width:370px;}
-	.board .tit{position:relative;line-height:24px;font-size:18px;font-weight:600;}
-	.board .tit a{position:absolute;right:0;font-size:14px;font-weight:400;color:#999;}
-	.board  ul{width:95%;margin-top:20px;}
-	.board  ul li{overflow:hidden;white-space:nowrap;text-overflow:ellipsis;margin-top:10px;line-height:22px;}
-	.board  ul li:first-child{margin-top:0px;}
-	.board  ul li .colorRed {color:#eb2d2d;}
-	.board .notice{margin-bottom:20px;}
-	.board .reference{padding-top:20px;border-top:1px solid #ddd;}
-
-	.rightBtnArea{width:370px;}
-	.rightBtnArea li{float:left;width:175px;height:177.5px;border-radius:10px;}
-	.rightBtnArea li:nth-child(1){background:#ff9720;margin-right:20px;margin-bottom:20px;}
-	.rightBtnArea li:nth-child(2){background:#ffaa49;margin-bottom:20px;}
-	.rightBtnArea li:nth-child(3){background:#fbb667;margin-right:20px;}
-	.rightBtnArea li:nth-child(4){background:#cc9351;}
-	.rightBtnArea li a{display:flex; align-items:center;justify-content:center;flex-direction:column;width:100%;height:100%;text-align:center;font-size:24px;line-height:33px;}
-	.rightBtnArea li a span{display:inline-block;margin-top:16px;color:#fff;}
-
-	.btmBanner{overflow:hidden;margin:36px auto 0;width:1000px;height:70px;border:1px solid #ddd;box-sizing:border-box;}
-	.btmBanner ul{white-space:nowrap;}
-	.btmBanner li{display:inline-block;padding:23px 15px;}
-
-	/** 가희 추가 **/
-	@media (max-width:1000px) {
-		body { font-size: .9rem; }
-		.contents { width: 100%; }
-		#header .contents { width: 95%; margin: 0 auto; }
-		#header .menuList { width: 50vw; height: calc(100vh - 80px); position: fixed; top: 80px; right: 0; z-index: 10; background: #eee; border-left: 1px solid #ddd; display: none;}
-		#header .menuList li { display: block; margin: 0; width:100%; height: 60px; line-height: 60px; border-bottom: 1px solid #999; box-sizing:  border-box; padding: 0 10px; }
-		#header .mo_menu { display: block; }
-		#footer { height: auto; padding: 20px; text-align: left; box-sizing: border-box;}
-		#footer .contents { flex-direction: column; align-items: flex-start;}		
-		#footer .fLogo { margin: 0 0 20px 0; }
-
-		.mainBanner { height: 110vw; }
-		.mainBanner .mainBg{background:url('./images/main_visual_mo.png')no-repeat center / cover;}
-		.mainBanner .txtArea { width: 100%; text-align: center; justify-content: center; align-items: flex-start; padding-top: 40px; color: #fff;}		
-		.mainBanner .txtArea .tit { font-size: 1.5rem; line-height: normal; }
-		.mainBanner .txtArea .tail { font-size: .9rem; line-height: normal; }	
-
-		.contents.mid { flex-direction: column; padding-top:0;}
-		.leftBtnArea { width: 100%; }
-		.leftBtnArea ul { display:  flex; justify-content: space-between; align-items: center; }
-		.leftBtnArea ul li { max-width: 33.3%; width: 100%; border-top: 0;}
-		.leftBtnArea li a span, .rightBtnArea li a span { font-size: .9rem; }
-		.rightBtnArea { width: 95%; margin: 0 auto; }
-		.rightBtnArea ul { display: flex; justify-content: space-between; align-items: revert; flex-wrap: wrap;}
-		.rightBtnArea ul li { max-width: calc(50% - 5px); width:100%; height:auto; margin: 0; padding: 10px; box-sizing: border-box;}
-		.rightBtnArea li:nth-child(1){margin-right:0;margin-bottom:0;}
-		.rightBtnArea li:nth-child(2){margin-bottom:0;}
-		.rightBtnArea li:nth-child(3){margin-right:0;}
-		.rightBtnArea ul li:nth-child(n+3) { margin-top: 10px; }
-		.rightBtnArea ul li:nth-child(2n) { margin-left: 10px; }
-		.rightBtnArea li a span { margin-top: .2rem; }
-		.rightBtnArea li a img { width: 2rem; }
-		.btmBanner { width: 95%; margin: 30px auto 0; }
-		.board { margin: 30px auto; width: 95%;}		
-	}
-
-</style>
 <script>	
 /* 키워드 */
 var keyWordPo = 0
