정보광장 추가

--- a/sub1.html
+++ b/sub1.html
@@ -71,27 +71,27 @@
 					</div>
 					<ul>
 						<li>
-							<a class="on" href="#">
+							<a class="on" href="./sub1.html">
 								<span>인사말</span>
 							</a>
 						</li>
 						<li>
-							<a href="#">
+							<a href="./sub1_2.html#tab1">
 								<span>연혁</span>
 							</a>
 						</li>
 						<li>
-							<a href="#">
+							<a href="./sub1_3.html">
 								<span>조직도</span>
 							</a>
 						</li>
 						<li>
-							<a href="#">
+							<a href="./sub1_4.html">
 								<span>임원현황</span>
 							</a>
 						</li>
 						<li>
-							<a href="#">
+							<a href="./sub1_5.html">
 								<span>오시는길</span>
 							</a>
 						</li>
@@ -126,132 +126,6 @@
 	</div>
 </body>
 </html>
-
-<style>
-	/**
-	태그 초기화
-	**/
-
-	@font-face {font-family: 'NotoSans';font-weight: 300;font-style: normal;src: url(./font/NotoSansCJKkr-Light.woff) format('woff');}
-	@font-face {font-family: 'NotoSans';font-weight: 400;font-style: normal;src: url(./font/NotoSansCJKkr-Regular.woff) format('woff');}
-	@font-face {font-family: 'NotoSans';font-weight: 500;font-style: normal;src: url(./font/NotoSansCJKkr-Medium.woff) format('woff');}
-	@font-face {font-family: 'NotoSans';font-weight: 700;font-style: normal;src: url(./font/NotoSansCJKkr-Bold.woff) format('woff');}
-	@font-face {font-family: 'Gmarket Sans';font-weight: 300;font-style: normal;src: url(./font/GmarketSansLight.woff) format('woff');}
-	@font-face {font-family: 'Gmarket Sans';font-weight: 500;font-style: normal;src: url(./font/GmarketSansMedium.woff) format('woff');}
-	@font-face {font-family: 'Gmarket Sans';font-weight: 700;font-style: normal;src: url(./font/GmarketSansBold.woff) format('woff');}
-
-	html, body{width:100%;height:100%;}
-	body{margin:0;font-family:'NotoSans','맑은고딕',sans-serif;font-weight:400;font-size:16px;line-height:22px;color:#444;}
-	div, iframe, h1, h2, h3, h4, h5, h6, p, button, abbr, address, blockquote, q, sub, sup, dl, dt, dd, ol, ul, li, fieldset, form, legend, table, caption, tbody, tfoot, thead, tr, th, td, hr{padding:0;margin:0;}
-	header, footer, section, article, aside, nav, hgroup, details, menu, figure, figcaption{display:block;padding:0;margin:0;}
-	h1, h2, h3, h4, h5, h6{font-weight:400;line-height:1;}
-	ol, ul, li{list-style:none;}
-	table{table-layout:fixed;width:100%;border-collapse:collapse;border-spacing:0;}
-	th{font-weight:400;}
-	form, fieldset, iframe{border:0;}
-	img{border:0;vertical-align:top;font-size:0;line-height:0;}
-	button{border:0;}
-	hr{border:0;}
-	i, em, address{font-style:normal;}
-	strong, b{font-weight:500;}
-	label, button{cursor:pointer;}
-	blockquote, q{quotes:none;}
-	caption, legend{overflow:hidden;width:0;height:0;font-size:0;line-height:0;text-indent:-50000px;}
-	input, textarea, select, button, video{padding:0;font-family:'noto','맑은고딕',sans-serif;font-weight:400;font-size:14px;color:#222;vertical-align:middle;background:none;border:0;outline:none;}
-	input::-ms-clear, input::-ms-reveal{display:none;}
-	a{color:#222;text-decoration:none;outline:none;}
-	a:hover{text-decoration:none;}
-
-	.container{position:relative;width:100%;overflow:hidden;}
-	.contents{position:relative;width:1000px;margin:0 auto;}
-	.contents.mid{padding-top:30px;display:flex;align-items:revert;justify-content:space-between;}
-
-	#header{display:flex;align-items:center;height:80px;background:#fff;}
-	#header .contents{display:flex;align-items:center;justify-content:space-between;}
-	#header .logo{}
-	#header .menuList{}
-	#header .menuList li{position:relative;display:inline-block;margin-left:50px;}
-	#header .menuList li:first-child{margin-left:0;}
-	#header .menuList li a{transition:0.5s;}
-	#header .menuList li a:hover,
-	#header .menuList li a:focus{color:#ff9720;}
-	#footer{margin-top:41px;height:114px;background:#efefef;display:flex;align-items:center;justify-content:center;flex-direction:column;}
-	#footer .contents{display:flex;align-items:center;justify-content:flex-start;}
-	#footer .fLogo{margin-right:67px;}
-	#footer .fInfo{line-height:19px;font-size:14px;color:#999;}
-	#footer .fInfo .addr{}
-	#footer .fInfo .contact{}
-	#footer .fInfo .contact span:after{content:'|';padding:0 5px;}
-	#footer .fInfo .contact span:last-child:after{content:none;}
-	#footer .fInfo .copyright{}
-
-	.mainBanner{width:100%;height:400px;background:#abcfcb;}
-	.mainBanner .mainBg{position:relative;width:100%;height:100%;background:url('main_visual.png')no-repeat center / cover;}
-	.mainBanner .txtArea{display:flex;width:1000px;height:100%;margin:0 auto;align-items:center;text-align:right;justify-content:flex-end;}
-	.mainBanner .txtArea .txt{}
-	.mainBanner .txtArea .tit{line-height:46px;font-size:36px;font-weight:700;font-family:'Gmarket Sans';color:#574e44;}
-	.mainBanner .txtArea .tail{margin-top:24px;line-height:30px;font-size:20px;color:#574e44;}
-
-	.leftBtnArea li{width:200px;height:93px;background:#ff9720;border-top:1px solid #fff;}
-	.leftBtnArea li:first-child{border-top:0 none;}
-	.leftBtnArea li a{display:flex;align-items:center;justify-content:center;flex-direction:column;width:100%;height:100%;text-align:center;}
-	.leftBtnArea li a span{display:inline-block;margin-top:6px;line-height:27px;font-size:20px;color:#fff;}
-
-	.board{width:370px;}
-	.board .tit{position:relative;line-height:24px;font-size:18px;font-weight:600;}
-	.board .tit a{position:absolute;right:0;font-size:14px;font-weight:400;color:#999;}
-	.board  ul{width:95%;margin-top:20px;}
-	.board  ul li{overflow:hidden;white-space:nowrap;text-overflow:ellipsis;margin-top:10px;line-height:22px;}
-	.board  ul li:first-child{margin-top:0px;}
-	.board  ul li .colorRed {color:#eb2d2d;}
-	.board .notice{margin-bottom:20px;}
-	.board .reference{padding-top:20px;border-top:1px solid #ddd;}
-
-	.rightBtnArea{width:370px;}
-	.rightBtnArea li{float:left;width:175px;height:177.5px;border-radius:10px;}
-	.rightBtnArea li:nth-child(1){background:#ff9720;margin-right:20px;margin-bottom:20px;}
-	.rightBtnArea li:nth-child(2){background:#ffaa49;margin-bottom:20px;}
-	.rightBtnArea li:nth-child(3){background:#fbb667;margin-right:20px;}
-	.rightBtnArea li:nth-child(4){background:#cc9351;}
-	.rightBtnArea li a{display:flex;align-items:center;justify-content:center;flex-direction:column;width:100%;height:100%;text-align:center;font-size:24px;line-height:33px;}
-	.rightBtnArea li a span{display:inline-block;margin-top:16px;color:#fff;}
-
-	.btmBanner{overflow:hidden;margin:36px auto 0;width:1000px;height:70px;border:1px solid #ddd;box-sizing:border-box;}
-	.btmBanner ul{white-space:nowrap;}
-	.btmBanner li{display:inline-block;padding:23px 15px;}
-
-
-	/* sub */
-	.breadcrumb{display:flex;align-items:center;height:38px;margin-bottom:30px;border-bottom:1px solid #ddd;text-align:right;}
-	.breadcrumb span{line-height:19px;font-size:14px;}
-	.breadcrumb span:after{content:'>';padding:0 2.5px;}
-	.breadcrumb span:last-child:after{content:none;}
-	.breadcrumb span em{font-weight:700;}
-
-	.sub.contents{display:flex;justify-content:space-between;}
-
-	.leftMenu{width:250px;text-align:center;}
-	.leftMenu .menuTit{display:flex;align-items:center;height:130px;background:url('sub_title.jpg')no-repeat center / cover;}
-	.leftMenu .menuTit h4{width:100%;line-height:36px;font-size:26px;color:#fff;}
-	.leftMenu ul{margin-top:30px;border:1px solid #ddd;}
-	.leftMenu ul li{height:60px;border-bottom:1px solid #ddd;box-sizing:border-box;}
-	.leftMenu ul li:last-child{border-bottom:0 none;}
-	.leftMenu ul li a{display:block;width:100%;height:100%;line-height:60px;}
-	.leftMenu ul li a.on{background:#efefef;}
-	.content{width:720px;}
-	.subTit{padding-bottom:16px;margin-bottom:40px;border-bottom:1px solid #574e44;line-height:33px;font-size:24px;font-weight:700;color:#574e44;}
-	.subCon{}
-	.subCon .imgArea{float:left;margin:0 34px 30px 0;}
-	.subCon .txtArea{line-height:26px;font-size:16px;}
-	.subCon .txtArea span{font-size:20px;font-weight:700;}
-
-	.subBanner{width:100%;height:130px;background:#abcfcb;}
-	.subBanner .mainBg{position:relative;width:100%;height:100%;background:url('sub_visual.png')no-repeat center / cover;}
-	.subBanner .txtArea{display:flex;width:1000px;height:100%;margin:0 auto;align-items:center;text-align:left;justify-content:flex-start;}
-	.subBanner .txtArea .txt{}
-	.subBanner .txtArea .tit{line-height:34px;font-size:28px;font-weight:700;color:#fff;}
-	.subBanner .txtArea .tail{margin-top:5px;line-height:28px;font-size:17px;color:#fff;}
-</style>
 <script>	
 /* 키워드 */
 var keyWordPo = 0
