--- a/sub3_2.html
+++ b/sub3_2.html
@@ -71,12 +71,12 @@
 					</div>
 					<ul>
 						<li>
-							<a class="on" href="./sub3.html">
+							<a href="./sub3.html">
 								<span>공지사항</span>
 							</a>
 						</li>
 						<li>
-							<a href="./sub3_2.html">
+							<a class="on" href="./sub3_2.html">
 								<span>자료실</span>
 							</a>
 						</li>
@@ -88,21 +88,23 @@
 					</ul>
 				</div>
 				<div class="content">
-					<div class="subTit">공지사항</div>
+					<div class="subTit">자료실</div>
 					<div class="subCon">
 						<table class="executive">
 							<colgroup>
+								<col width="7%">
 								<col width="10%">
 								<col width="*">
-								<col width="20%">
+								<col width="10%">
 								<col width="10%">
 								<col width="15%">
 							</colgroup>
 							<thead>
 								<tr>
 									<th>No</th>
+									<th>파일</th>
 									<th>제목</th>
-									<th>업체명</th>
+									<th>작성자</th>
 									<th>조회</th>
 									<th>작성일</th>
 								</tr>
@@ -110,71 +112,81 @@
 							<tbody>
 								<tr>
 									<td>1</td>
+									<td><a href="#"><img src="./images/file.png"></a></td>
 									<td class="title"><a href="#">공지사항 입니다.공지사항 입니다.공지사항 입니다.공지사항 입니다.공지사항 입니다.</a></td>
-									<td>(주)발트코리아</td>
+									<td>홍길동</td>
 									<td>1</td>
 									<td>2021-01-01</td>
 								</tr>
 								<tr>
 									<td>1</td>
+									<td><a href="#"><img src="./images/file.png"></a></td>
 									<td class="title"><a href="#">공지사항 입니다.공지사항 입니다.공지사항 입니다.공지사항 입니다.공지사항 입니다.</a></td>
-									<td>(주)발트코리아</td>
+									<td>홍길동</td>
 									<td>1</td>
 									<td>2021-01-01</td>
 								</tr>
 								<tr>
 									<td>1</td>
+									<td><a href="#"><img src="./images/file.png"></a></td>
 									<td class="title"><a href="#">공지사항 입니다.공지사항 입니다.공지사항 입니다.공지사항 입니다.공지사항 입니다.</a></td>
-									<td>(주)발트코리아</td>
+									<td>홍길동</td>
 									<td>1</td>
 									<td>2021-01-01</td>
 								</tr>
 								<tr>
 									<td>1</td>
+									<td><a href="#"><img src="./images/file.png"></a></td>
 									<td class="title"><a href="#">공지사항 입니다.공지사항 입니다.공지사항 입니다.공지사항 입니다.공지사항 입니다.</a></td>
-									<td>(주)발트코리아</td>
+									<td>홍길동</td>
 									<td>1</td>
 									<td>2021-01-01</td>
 								</tr>
 								<tr>
 									<td>1</td>
+									<td><a href="#"><img src="./images/file.png"></a></td>
 									<td class="title"><a href="#">공지사항 입니다.공지사항 입니다.공지사항 입니다.공지사항 입니다.공지사항 입니다.</a></td>
-									<td>(주)발트코리아</td>
+									<td>홍길동</td>
 									<td>1</td>
 									<td>2021-01-01</td>
 								</tr>
 								<tr>
 									<td>1</td>
+									<td><a href="#"><img src="./images/file.png"></a></td>
 									<td class="title"><a href="#">공지사항 입니다.공지사항 입니다.공지사항 입니다.공지사항 입니다.공지사항 입니다.</a></td>
-									<td>(주)발트코리아</td>
+									<td>홍길동</td>
 									<td>1</td>
 									<td>2021-01-01</td>
 								</tr>
 								<tr>
 									<td>1</td>
+									<td><a href="#"><img src="./images/file.png"></a></td>
 									<td class="title"><a href="#">공지사항 입니다.공지사항 입니다.공지사항 입니다.공지사항 입니다.공지사항 입니다.</a></td>
-									<td>(주)발트코리아</td>
+									<td>홍길동</td>
 									<td>1</td>
 									<td>2021-01-01</td>
 								</tr>
 								<tr>
 									<td>1</td>
+									<td><a href="#"><img src="./images/file.png"></a></td>
 									<td class="title"><a href="#">공지사항 입니다.공지사항 입니다.공지사항 입니다.공지사항 입니다.공지사항 입니다.</a></td>
-									<td>(주)발트코리아</td>
+									<td>홍길동</td>
 									<td>1</td>
 									<td>2021-01-01</td>
 								</tr>
 								<tr>
 									<td>1</td>
+									<td><a href="#"><img src="./images/file.png"></a></td>
 									<td class="title"><a href="#">공지사항 입니다.공지사항 입니다.공지사항 입니다.공지사항 입니다.공지사항 입니다.</a></td>
-									<td>(주)발트코리아</td>
+									<td>홍길동</td>
 									<td>1</td>
 									<td>2021-01-01</td>
 								</tr>
 								<tr>
 									<td>1</td>
+									<td><a href="#"><img src="./images/file.png"></a></td>
 									<td class="title"><a href="#">공지사항 입니다.공지사항 입니다.공지사항 입니다.공지사항 입니다.공지사항 입니다.</a></td>
-									<td>(주)발트코리아</td>
+									<td>홍길동</td>
 									<td>1</td>
 									<td>2021-01-01</td>
 								</tr>
