--- a/sub1_2.html
+++ b/sub1_2.html
@@ -71,27 +71,27 @@
 					</div>
 					<ul>
 						<li>
-							<a href="#">
+							<a href="./sub1.html">
 								<span>인사말</span>
 							</a>
 						</li>
 						<li>
-							<a class="on" href="#">
+							<a class="on" href="./sub1_2.html#tab1">
 								<span>연혁</span>
 							</a>
 						</li>
 						<li>
-							<a href="#">
+							<a href="./sub1_3.html">
 								<span>조직도</span>
 							</a>
 						</li>
 						<li>
-							<a href="#">
+							<a href="./sub1_4.html">
 								<span>임원현황</span>
 							</a>
 						</li>
 						<li>
-							<a href="#">
+							<a href="./sub1_5.html">
 								<span>오시는길</span>
 							</a>
 						</li>
