--- a/sub1_1.html
+++ b/sub1_1.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head> 
-    <title>한국콘크리트시험원</title>
+	<title>한국보일러공업협동조합</title>
 
-	<link rel="shortcut icon" href="http://kctl.or.kr/KCTL/Image/Favicon/favicon.ico"/>
-	   
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
-	<link rel="stylesheet" href="common.css" type="text/css">
-	<link rel="stylesheet" href="contents.css" type="text/css">
+	<link rel="shortcut icon" href="./images/favicon.ico"/>	  
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="">
+	<meta name="author" content="">
 	<script type="text/javascript" src="../../Plugin/JQuery/js/jquery-1.11.1.min.js"></script>
 	<script type="text/javascript" src="../../Plugin/JQuery/js/jquery-migrate-1.2.1.min.js"></script>    
 	<script type="text/javascript" src="../../Plugin/JQuery/js/jquery-ui.js"></script>
 	<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-	<script type="text/javascript" src="ui.js"></script>
+	<script type="text/javascript" src="./js/ui.js"></script>
+	<link rel="stylesheet" href="./css/common.css" />
+	<link rel="stylesheet" href="./css/contents.css" />
 </head>
 <body>
 	<div id="wrap">
