--- a/sub4_5.html
+++ b/sub4_5.html
@@ -13,7 +13,7 @@
 	<script type="text/javascript" src="../../Plugin/JQuery/js/jquery-migrate-1.2.1.min.js"></script>    
 	<script type="text/javascript" src="../../Plugin/JQuery/js/jquery-ui.js"></script>
 	<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-	<script type="text/javascript" src="ui.js"></script>
+	<script type="text/javascript" src="./js/ui.js"></script>
 	<link rel="stylesheet" href="./css/common.css" />
 	<link rel="stylesheet" href="./css/contents.css" />
 </head>
@@ -118,28 +118,78 @@
 								</li>
 								<li>
 									<div class="title">업무처리 절차</div>
-									<ul class="gsTable info">
+									<ul class="gsTable info step nm5">
 										<li>
-											<p class="tit">공동상표 관리규정</p>
-											<p class="tail">상표에 관한 인식이 높고<br>진취적인 사고를 갖춘 조합원사</p>
+											<p class="tit">공공기관</p>
+											<p class="tail">추천요청</p>
 										</li>
 										<li>
-											<p class="tit">공동상표운영위원회</p>
-											<p class="tail">제반 운영사항 공동 심의</p>
+											<p class="tit">중소기업</p>
+											<p class="tail">- 정보검색<br>- 추천요청</p>
 										</li>
 										<li>
-											<p class="tit">생산 및 판매</p>
-											<p class="tail">품질인증에 합격한 상품에 한하여<br>공동 또는 개별로 생산, 판매</p>
+											<p class="tit">협동조합</p>
+											<p class="tail">- 적격심사<br>- 추천</p>
 										</li>
 										<li>
-											<p class="tit">생산 및 판매</p>
-											<p class="tail">품질인증에 합격한 상품에 한하여<br>공동 또는 개별로 생산, 판매</p>
+											<p class="tit">공공기관</p>
+											<p class="tail">- 수의공고<br>- 견적접수<br>- 계약</p>
+										</li>
+										<li>
+											<p class="tit">협동조합</p>
+											<p class="tail">계약결과<br>입력</p>
 										</li>
 									</ul>
 								</li>
 							</ul>
-							<p class="tail">- 중소기업제품의 판로지원 및 중소기업의 경쟁력 향상을 위해 「중소기업제품 구매촉진 및 판로지원에 관한 법률」 제2조에서 정한 공공기관의 중소기업제품 구매 확대를 위한 다양한 제도를 총칭
-							<br>- 「중소기업제품 구매촉진 및 판로지원에 관한 법률」은 「국가(지방자치단체)를 당사자로 하는 계약에 관한 법률」에 우선하여 적용</p>
+						</div>
+						<div class="txtArea">
+                            <p class="tit">소기업 공동사업재품 우선구매제도</p>
+							<ul class="subUl">
+								<li>
+									<div class="title">개요</div>
+									<div class="txt">중소기업협동조합과 3개 이상의 소기업〮소상공인이 ‘공동사업’을 통해 제품화한 경우
+										- 공동사업 수행 소기업〮소상공인간 제한경쟁 가능
+										- 협동조합에 업체 추천요청 이후 → 추천업체간 지명경쟁 가능
+										공동사업 수행 활성화로 협동조합 소기업〮소상공인간 기술 및 노하우 공유를 통해 품질 향상 및 
+										시너지 창출 효과</div>
+								</li>
+								<li>
+									<div class="title">근거법령</div>
+									<div class="txt">판로지원법 제7조의2, 국가계약법시행령 제21조 및 제23조, 지방계약법시행령 제20조 및 제22조</div>
+								</li>
+								<li>
+									<div class="title">공동사업이란?</div>
+									<div class="txt">- 「중소기업진흥에 관한 법률」 제39조에 따른 협업지원사업의 대상 사업
+										- 「중소기업협동조합법」 제3조에 따른 중소기업협동조합(이하 “조합”이라 한다)이 3인 이상의 소기업 
+										  또는 소상공인과 공동상표를 활용하는 사업
+										- 조합이 보유하거나 3인 이상의 소기업 또는 소상공인이 공동으로 보유한 특허권을 활용하는 사업
+										- 조합 또는 3인 이상의 소기업 또는 소상공인이 공동으로 참여하는 사업으로서 「중소기업 기술혁신 
+										  촉진법」 제9조제1항에 따른 기술혁신 촉진 지원사업의 대상 사업
+										 - 「산업표준화법」 제27조제2항에 따른 단체표준인증을 받은 물품 또는 용역의 생산〮제공 사업</div>
+								</li>
+								<li>
+									<div class="title">제도활용 절차(지명경쟁 활용시)</div>
+									<ul class="gsTable info step nm4">
+										<li>
+											<p class="tit">공공기관</p>
+											<p class="tail">추천요청</p>
+										</li>
+										<li>
+											<p class="tit">공동사업 수행<br>소기업〮소상공인</p>
+											<p class="tail">추천신청</p>
+										</li>
+										<li>
+											<p class="tit">공공기관</p>
+											<p class="tail">요건검토 후 추천</p>
+										</li>
+										<li>
+											<p class="tit">공공기관</p>
+											<p class="tail">추천업체간<br>지명경쟁 실시</p>
+										</li>
+									</ul>
+								</li>
+							</ul>
 						</div>
 					</div>
 				</div>
