--- a/sub4_1.html
+++ b/sub4_1.html
@@ -13,7 +13,7 @@
 	<script type="text/javascript" src="../../Plugin/JQuery/js/jquery-migrate-1.2.1.min.js"></script>    
 	<script type="text/javascript" src="../../Plugin/JQuery/js/jquery-ui.js"></script>
 	<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-	<script type="text/javascript" src="ui.js"></script>
+	<script type="text/javascript" src="./js/ui.js"></script>
 	<link rel="stylesheet" href="./css/common.css" />
 	<link rel="stylesheet" href="./css/contents.css" />
 </head>
