가히님짱짱맨

--- a/sub4_5.html
+++ b/sub4_5.html
@@ -125,15 +125,15 @@
 										</li>
 										<li>
 											<p class="tit">중소기업</p>
-											<p class="tail">- 정보검색<br>- 추천요청</p>
+											<p class="tail tlf">- 정보검색<br>- 추천요청</p>
 										</li>
 										<li>
 											<p class="tit">협동조합</p>
-											<p class="tail">- 적격심사<br>- 추천</p>
+											<p class="tail tlf">- 적격심사<br>- 추천</p>
 										</li>
 										<li>
 											<p class="tit">공공기관</p>
-											<p class="tail">- 수의공고<br>- 견적접수<br>- 계약</p>
+											<p class="tail tlf">- 수의공고<br>- 견적접수<br>- 계약</p>
 										</li>
 										<li>
 											<p class="tit">협동조합</p>
