--- a/sub1_2.html
+++ b/sub1_2.html
@@ -76,7 +76,7 @@
 							</a>
 						</li>
 						<li>
-							<a class="on" href="./sub1_2.html#tab1">
+							<a class="on" href="./sub1_2.html">
 								<span>연혁</span>
 							</a>
 						</li>
@@ -111,70 +111,75 @@
 							보일러조합은 앞으로도 보일러 업계 스스로의 상호부조 정신에 입각, 협동화 사업을 통하여 경제적인 기회균등과 지위를 확보하고 고효율 보일러기기개발과 환경친화산업으로의 발전을 위해 계속 노력해 나가겠습니다.
 						</div>
 						<div class="tit">연혁</div>
-						<ul class="historyTab">
-							<li id="tab1" class="btnCon"><a class="btn first" href="#tab1">2010 ~ 현재</a>
-							  <div class="tabCon">
-								  <ol>
-									<li>
-										<div class="date">2011. 04. 15.</div>
-										<div class="con">제11대 박상준 이사장 취임(11,12대 중임)</div>
-									</li>
-									<li>
-										<div class="date">2011. 04. 15.</div>
-										<div class="con">제11대 박상준 이사장 취임(11,12대 중임)</div>
-									</li>
-									<li>
-										<div class="date">2011. 04. 15.</div>
-										<div class="con">제11대 박상준 이사장 취임(11,12대 중임)</div>
-									</li>
-									<li>
-										<div class="date">2011. 04. 15.</div>
-										<div class="con">제11대 박상준 이사장 취임(11,12대 중임)</div>
-									</li>
-									<li>
-										<div class="date">2011. 04. 15.</div>
-										<div class="con">제11대 박상준 이사장 취임(11,12대 중임)</div>
-									</li>
-								  </ol>
-							  </div>
-							</li>
-							<li id="tab2" class="btnCon"><a class="btn" href="#tab2">2000 ~ 2009</a>
-								<div class="tabCon">
-									<ol>
-										<li>
-											<div class="date">2011. 04. 15.</div>
-											<div class="con">제11대 박상준 이사장 취임(11,12대 중임)</div>
-										</li>
-										<li>
-											<div class="date">2011. 04. 15.</div>
-											<div class="con">제11대 박상준 이사장 취임(11,12대 중임)</div>
-										</li>
-										<li>
-											<div class="date">2011. 04. 15.</div>
-											<div class="con">제11대 박상준 이사장 취임(11,12대 중임)</div>
-										</li>
-									</ol>
-								</div>
-							</li>
-							<li id="tab3" class="btnCon"><a class="btn" href="#tab3">1983 ~ 1999</a>
-								<div class="tabCon">
-									<ol>
-									  <li>
-										  <div class="date">2011. 04. 15.</div>
-										  <div class="con">제11대 박상준 이사장 취임(11,12대 중임)</div>
-									  </li>
-									  <li>
-										  <div class="date">2011. 04. 15.</div>
-										  <div class="con">제11대 박상준 이사장 취임(11,12대 중임)</div>
-									  </li>
-									</ol>
-								</div>
-							</li>
+						<ul class="tabType switch" id="tabCon">
+							<li class="on"><a href="#tab1"><span>2010 ~ 현재</span></a></li>
+							<li><a href="#tab2"><span>1983 ~ 1999</span></a></li>
+							<li><a href="#tab3"><span>1983 ~ 1999</span></a></li>
 						</ul>
+						<div class="tabCon" id="tab1">
+							<ol>
+								<li>
+									<div class="date">2011. 04. 15.</div>
+									<div class="con">제11대 박상준 이사장 취임(11,12대 중임)</div>
+								</li>
+								<li>
+									<div class="date">2011. 04. 15.</div>
+									<div class="con">제11대 박상준 이사장 취임(11,12대 중임)</div>
+								</li>
+								<li>
+									<div class="date">2011. 04. 15.</div>
+									<div class="con">제11대 박상준 이사장 취임(11,12대 중임)</div>
+								</li>
+								<li>
+									<div class="date">2011. 04. 15.</div>
+									<div class="con">제11대 박상준 이사장 취임(11,12대 중임)</div>
+								</li>
+								<li>
+									<div class="date">2011. 04. 15.</div>
+									<div class="con">제11대 박상준 이사장 취임(11,12대 중임)</div>
+								</li>
+							</ol>
+						</div>
+						<div class="tabCon" id="tab2">
+							<ol>
+								<li>
+									<div class="date">2011. 04. 15.</div>
+									<div class="con">제11대 박상준 이사장 취임(11,12대 중임)</div>
+								</li>
+								<li>
+									<div class="date">2011. 04. 15.</div>
+									<div class="con">제11대 박상준 이사장 취임(11,12대 중임)</div>
+								</li>
+							</ol>
+						</div>
+						<div class="tabCon" id="tab3">
+							<ol>
+								<li>
+									<div class="date">2011. 04. 15.</div>
+									<div class="con">제11대 박상준 이사장 취임(11,12대 중임)</div>
+								</li>
+								<li>
+									<div class="date">2011. 04. 15.</div>
+									<div class="con">제11대 박상준 이사장 취임(11,12대 중임)</div>
+								</li>
+							</ol>
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
+		<script>
+			$(document).on('click', '.tabType a', function(){
+				if ($(this).parents('.tabType').hasClass('switch')) {
+					console.log($(this).parents('.tabType').attr('id'));
+					$('.'+$(this).parents('.tabType').attr('id')).hide();
+					$($(this).attr('href')).show();
+					$(this).parent().siblings().removeClass('on');
+					$(this).parent().addClass('on');
+					return false;
+				}
+			});
+		</script>
 		<footer id="footer">
 			<div class="contents">
 				<div class="fLogo">
