--- a/sub1.html
+++ b/sub1.html
@@ -36,7 +36,7 @@
 							<a href="./sub3.html">정보광장</a>
 						</li>
 						<li>
-							<a href="./sub4_1.html">사업정보</a>
+							<a href="./sub4.html">사업정보</a>
 						</li>
 						<li>
 							<a href="#">인트라넷</a>
@@ -76,7 +76,7 @@
 							</a>
 						</li>
 						<li>
-							<a href="./sub1_2.html#tab1">
+							<a href="./sub1_2.html">
 								<span>연혁</span>
 							</a>
 						</li>
