--- a/sub2.html
+++ b/sub2.html
@@ -60,83 +60,124 @@
 			<div class="breadcrumb">
 				<div class="contents">
 					<span>home</span>
-					<span>사업정보</span>
-					<span><em>주요사업</em></span>
+					<span>정보광장</span>
+					<span><em>공지사항</em></span>
 				</div>
 			</div>
 			<div class="sub contents">
 				<div class="leftMenu">
 					<div class="menuTit">
-						<h4>사업정보</h4>
+						<h4>조합원사</h4>
 					</div>
 					<ul>
 						<li>
-							<a href="./sub4.html">
-								<span>주요사업</span>
+							<a class="on" href="./sub2.html">
+								<span>조합원사 현황</span>
 							</a>
 						</li>
 						<li>
-							<a href="./sub4_2.html">
-								<span>단체표준</span>
+							<a href="./sub2_2.html">
+								<span>가입안내</span>
 							</a>
 						</li>
 						<li>
-							<a class="on" href="./sub4_3.html">
-								<span>공동상표</span>
-							</a>
-						</li>
-						<li>
-							<a href="./sub4_4.html">
-								<span>중소기업제품 공공구매제도 소개</span>
-							</a>
-						</li>
-						<li>
-							<a href="./sub4_5.html">
-								<span> 공공구매 안내</span>
+							<a href="./sub2_3.html">
+								<span>조합원사 소식</span>
 							</a>
 						</li>
 					</ul>
 				</div>
-				<div class="content groupStrandard">
-					<div class="subTit">공동상표</div>
+				<div class="content">
+					<div class="subTit">조합원사 현황</div>
 					<div class="subCon">
-						<div class="txtArea">
-                            <p class="tit">공동상표란?</p>
-							<p class="tail">다수의 중소기업들이 공동으로 사용하는 상표로 자금력이 부족한 중소기업들이 공동으로 상표(브랜드)를 개발하여 자사의 제품에 부착함으로써 제품의 이미지와 판로 확대를 목적으로 추진하는 사업으로 정부에서는 5개 이상의 중소기업들이 공동상표를 개발〮사용하고자 하는 때에 등록을 받아 지원하고 있음.</p>
-						</div>
-						<div class="txtArea">
-                            <p class="tit">공동상표 등록현황</p>
-							<img src="./images/certificate.png" alt="">
-						</div>
-						<div class="txtArea">
-                            <p class="tit">공동상표 관리규정</p>
-							<div class="flexArea">
-								<ul class="gsTable">
-									<li>
-										<p class="tit">공동상표 관리규정</p>
-										<p class="tail">상표에 관한 인식이 높고<br>진취적인 사고를 갖춘 조합원사</p>
-									</li>
-									<li>
-										<p class="tit">공동상표운영위원회</p>
-										<p class="tail">제반 운영사항 공동 심의</p>
-									</li>
-									<li>
-										<p class="tit">생산 및 판매</p>
-										<p class="tail">품질인증에 합격한 상품에 한하여<br>공동 또는 개별로 생산, 판매</p>
-									</li>
-									<li>
-										<p class="tit">품질 및 기술관리</p>
-										<p class="tail">품질 향상 및 기술 개발 촉진<br>검사 합격 제품만 상표 부착 가능</p>
-									</li>
-								</ul>
-								<div class="path">
-									<img src="./images/path.png" alt="">
-								</div>
-								<div class="circle">
-									<img src="./images/award_icon.png" alt="">
-									<span>성능과 품질이 우수한<br>제품을 공급</span>
-								</div>
-							</div>
+						<table class="executive">
+							<colgroup>
+								<col width="25%">
+								<col width="15%">
+								<col width="*">
+								<col width="30%">
+							</colgroup>
+							<thead>
+								<tr>
+									<th>업체명</th>
+									<th>대표자</th>
+									<th>연락처</th>
+									<th>주요생산품</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr>
+									<td>주식회사 강원</td>
+									<td>한일주</td>
+									<td>070-7467-9055</td>
+									<td>수관식보일러</td>
+								</tr>
+								<tr>
+									<td>주식회사 강원</td>
+									<td>한일주</td>
+									<td>070-7467-9055</td>
+									<td>수관식보일러</td>
+								</tr>
+								<tr>
+									<td>주식회사 강원</td>
+									<td>한일주</td>
+									<td>070-7467-9055</td>
+									<td>수관식보일러</td>
+								</tr>
+								<tr>
+									<td>주식회사 강원</td>
+									<td>한일주</td>
+									<td>070-7467-9055</td>
+									<td>수관식보일러</td>
+								</tr>
+								<tr>
+									<td>주식회사 강원</td>
+									<td>한일주</td>
+									<td>070-7467-9055</td>
+									<td>수관식보일러</td>
+								</tr>
+								<tr>
+									<td>주식회사 강원</td>
+									<td>한일주</td>
+									<td>070-7467-9055</td>
+									<td>수관식보일러</td>
+								</tr>
+								<tr>
+									<td>주식회사 강원</td>
+									<td>한일주</td>
+									<td>070-7467-9055</td>
+									<td>수관식보일러</td>
+								</tr>
+								<tr>
+									<td>주식회사 강원</td>
+									<td>한일주</td>
+									<td>070-7467-9055</td>
+									<td>수관식보일러</td>
+								</tr>
+								<tr>
+									<td>주식회사 강원</td>
+									<td>한일주</td>
+									<td>070-7467-9055</td>
+									<td>수관식보일러</td>
+								</tr>
+								<tr>
+									<td>주식회사 강원</td>
+									<td>한일주</td>
+									<td>070-7467-9055</td>
+									<td>수관식보일러</td>
+								</tr>
+							</tbody>
+						</table>
+						<div class="paging">
+							<a href="#" title="이전"><img src="./images/prev.png" title="이전"/></a>
+							<ul class="page">
+								<li class="on"><a href="#">1</a></li>
+								<li><a href="#">2</a></li>
+								<li><a href="#">3</a></li>
+								<li><a href="#">4</a></li>
+								<li><a href="#">5</a></li>
+							</ul>
+							<a href="#" title="다음"><img src="./images/next.png" title="다음"/></a>
 						</div>
 					</div>
 				</div>
