--- a/sub2_2.html
+++ b/sub2_2.html
@@ -60,83 +60,67 @@
 			<div class="breadcrumb">
 				<div class="contents">
 					<span>home</span>
-					<span>사업정보</span>
-					<span><em>주요사업</em></span>
+					<span>정보광장</span>
+					<span><em>공지사항</em></span>
 				</div>
 			</div>
 			<div class="sub contents">
 				<div class="leftMenu">
 					<div class="menuTit">
-						<h4>사업정보</h4>
+						<h4>조합원사</h4>
 					</div>
 					<ul>
 						<li>
-							<a href="./sub4.html">
-								<span>주요사업</span>
+							<a href="./sub2.html">
+								<span>조합원사 현황</span>
 							</a>
 						</li>
 						<li>
-							<a href="./sub4_2.html">
-								<span>단체표준</span>
+							<a class="on" href="./sub2_2.html">
+								<span>가입안내</span>
 							</a>
 						</li>
 						<li>
-							<a class="on" href="./sub4_3.html">
-								<span>공동상표</span>
-							</a>
-						</li>
-						<li>
-							<a href="./sub4_4.html">
-								<span>중소기업제품 공공구매제도 소개</span>
-							</a>
-						</li>
-						<li>
-							<a href="./sub4_5.html">
-								<span> 공공구매 안내</span>
+							<a href="./sub2_3.html">
+								<span>조합원사 소식</span>
 							</a>
 						</li>
 					</ul>
 				</div>
-				<div class="content groupStrandard">
-					<div class="subTit">공동상표</div>
+				<div class="content">
+					<div class="subTit">가입 안내</div>
 					<div class="subCon">
 						<div class="txtArea">
-                            <p class="tit">공동상표란?</p>
-							<p class="tail">다수의 중소기업들이 공동으로 사용하는 상표로 자금력이 부족한 중소기업들이 공동으로 상표(브랜드)를 개발하여 자사의 제품에 부착함으로써 제품의 이미지와 판로 확대를 목적으로 추진하는 사업으로 정부에서는 5개 이상의 중소기업들이 공동상표를 개발〮사용하고자 하는 때에 등록을 받아 지원하고 있음.</p>
+                            <p class="tit">조합원 자격</p>
+							<p class="tail">1. 조합의 업무구역 안에서 보일러 및 버너 업종의 사업을 영위하는 중소기업자<br>2. 조합의 업무구역 안에서 한국표준산업분류 세세분류 29176 업종의 중소기업자(이하 “다른 업종”)의 사업을 영위하는 중소기업자<br>3. 제1호에 정한 중소기업자외의 자. 다만, 조합원 5인이상의 추천 및 이사회의 의결을 거쳐야 한다.</p>
+						</div>
+						<div class="flexArea">
+							<ul class="gsTable join">
+								<li>
+									<p class="tit">조합가입신청서 제출</p>
+									<p class="tail">조합에 가입코자 하는 자는 소정의 서식을 갖추어 가입신청서를 제출하여야 합니다. [정보광장→자료실(조합가입신청시 구비서류안내 참조)]</p>
+								</li>
+								<li>
+									<p class="tit">업체현황 실태조사</p>
+									<p class="tail">조합은 제출된 서류를 검토하고 업체현황을 정확히 파악하기 위해 실태조사를 실시합니다.</p>
+								</li>
+								<li>
+									<p class="tit">가입승낙 통보</p>
+									<p class="tail">조합원 가입을 승인하고 출자금 및 가입금 납부를 통보합니다.</p>
+								</li>
+								<li>
+									<p class="tit">출자금 및 가입금 납부</p>
+									<p class="tail">출자금 및 가입금 납부합니다.</p>
+								</li>
+								<li>
+									<p class="tit">조합 가입 확정 통보</p>
+									<p class="tail">조합원 가입의 확정을 통보합니다.</p>
+								</li>
+							</ul>
 						</div>
 						<div class="txtArea">
-                            <p class="tit">공동상표 등록현황</p>
-							<img src="./images/certificate.png" alt="">
-						</div>
-						<div class="txtArea">
-                            <p class="tit">공동상표 관리규정</p>
-							<div class="flexArea">
-								<ul class="gsTable">
-									<li>
-										<p class="tit">공동상표 관리규정</p>
-										<p class="tail">상표에 관한 인식이 높고<br>진취적인 사고를 갖춘 조합원사</p>
-									</li>
-									<li>
-										<p class="tit">공동상표운영위원회</p>
-										<p class="tail">제반 운영사항 공동 심의</p>
-									</li>
-									<li>
-										<p class="tit">생산 및 판매</p>
-										<p class="tail">품질인증에 합격한 상품에 한하여<br>공동 또는 개별로 생산, 판매</p>
-									</li>
-									<li>
-										<p class="tit">품질 및 기술관리</p>
-										<p class="tail">품질 향상 및 기술 개발 촉진<br>검사 합격 제품만 상표 부착 가능</p>
-									</li>
-								</ul>
-								<div class="path">
-									<img src="./images/path.png" alt="">
-								</div>
-								<div class="circle">
-									<img src="./images/award_icon.png" alt="">
-									<span>성능과 품질이 우수한<br>제품을 공급</span>
-								</div>
-							</div>
+                            <p class="tit">출자금 및 가입금 등 안내</p>
+							<p class="tail">- 가입금 : 300,000원 (가입신청시 납부)<br>- 출자금 : 12좌이상 (1좌당 10만원으로 가입승인일로부터 3주내에 현금으로 납부)<br>- 월회비 : 100,000원</p>
 						</div>
 					</div>
 				</div>
