--- a/sub4_2.html
+++ b/sub4_2.html
@@ -36,7 +36,7 @@
 							<a href="./sub3.html">정보광장</a>
 						</li>
 						<li>
-							<a href="./sub4_1.html">사업정보</a>
+							<a href="./sub4.html">사업정보</a>
 						</li>
 						<li>
 							<a href="#">인트라넷</a>
@@ -71,27 +71,27 @@
 					</div>
 					<ul>
 						<li>
-							<a href="#">
+							<a href="./sub4.html">
 								<span>주요사업</span>
 							</a>
 						</li>
 						<li>
-							<a class="on" href="#">
+							<a class="on" href="./sub4_2.html">
 								<span>단체표준</span>
 							</a>
 						</li>
 						<li>
-							<a href="#">
+							<a href="./sub4_3.html">
 								<span>공동상표</span>
 							</a>
 						</li>
 						<li>
-							<a href="#">
+							<a href="./sub4_4.html">
 								<span>중소기업제품 공공구매제도 소개</span>
 							</a>
 						</li>
 						<li>
-							<a href="#">
+							<a href="./sub4_5.html">
 								<span> 공공구매 안내</span>
 							</a>
 						</li>
