--- a/sub4_4.html
+++ b/sub4_4.html
@@ -36,7 +36,7 @@
 							<a href="./sub3.html">정보광장</a>
 						</li>
 						<li>
-							<a href="./sub4_1.html">사업정보</a>
+							<a href="./sub4.html">사업정보</a>
 						</li>
 						<li>
 							<a href="#">인트라넷</a>
@@ -71,27 +71,27 @@
 					</div>
 					<ul>
 						<li>
-							<a href="#">
+							<a href="./sub4.html">
 								<span>주요사업</span>
 							</a>
 						</li>
 						<li>
-							<a href="#">
+							<a href="./sub4_2.html">
 								<span>단체표준</span>
 							</a>
 						</li>
 						<li>
-							<a href="#">
+							<a href="./sub4_3.html">
 								<span>공동상표</span>
 							</a>
 						</li>
 						<li>
-							<a class="on" href="#">
+							<a class="on" href="./sub4_4.html">
 								<span>중소기업제품 공공구매제도 소개</span>
 							</a>
 						</li>
 						<li>
-							<a href="#">
+							<a href="./sub4_5.html">
 								<span> 공공구매 안내</span>
 							</a>
 						</li>
@@ -107,18 +107,26 @@
 						</div>
 						<div class="txtArea">
                             <p class="tit">주요내용</p>
-							<ul class="gsTable info">
+							<ul class="gsTable info step h155">
 								<li>
-									<p class="tit">공동상표 관리규정</p>
-									<p class="tail">상표에 관한 인식이 높고<br>진취적인 사고를 갖춘 조합원사</p>
+									<p class="tit">중소기업자간 경쟁제도</p>
+									<p class="tail">계약능력이행능력심사, <br>
+										직접생산확인제도, <br>
+										적격조합 확인제도,<br>
+										공사용자재 직접구매제도</p>
 								</li>
 								<li>
-									<p class="tit">공동상표운영위원회</p>
-									<p class="tail">제반 운영사항 공동 심의</p>
+									<p class="tit">기술개발제품 우선구매제도</p>
+									<p class="tail">기술개발제품 우선구매,<br>
+										성능인증,<br>
+										성능검사/원가계산비용 지원</p>
 								</li>
 								<li>
-									<p class="tit">생산 및 판매</p>
-									<p class="tail">품질인증에 합격한 상품에 한하여<br>공동 또는 개별로 생산, 판매</p>
+									<p class="tit">구매목표비율제도</p>
+									<p class="tail">중기간경쟁제품<br>
+										구매목표비율,<br>
+										기술개발제품 구매목표비율,<br>
+										여성기업제품 구매목표비율</p>
 								</li>
 							</ul>
 						</div>
