--- a/sub3_3.html
+++ b/sub3_3.html
@@ -36,7 +36,7 @@
 							<a href="./sub3.html">정보광장</a>
 						</li>
 						<li>
-							<a href="./sub4_1.html">사업정보</a>
+							<a href="./sub4.html">사업정보</a>
 						</li>
 						<li>
 							<a href="#">인트라넷</a>
