--- a/sub1_2.html
+++ b/sub1_2.html
@@ -101,7 +101,7 @@
 					<div class="subTit">연혁</div>
 					<div class="subCon">
 						<div class="tit">설립목적</div>
-						<div class="imgArea">
+						<div class="imgArea full">
 							<img src="./images/intro_img.png" alt="">
 						</div>
 						<div class="txtArea">
