--- a/main.html
+++ b/main.html
@@ -27,16 +27,40 @@
 				<div class="menuList">
 					<ul>
 						<li>
-							<a href="./sub1.html">조합소개</a>
+							<a href="./sub1.html" class="menu">조합소개</a>
+							<ul class="acodian">
+								<li><a href="./sub1.html">인사말</a></li>
+								<li><a href="./sub1_2.html">연혁</a></li>
+								<li><a href="./sub1_3.html">조직도</a></li>
+								<li><a href="./sub1_4.html">임원현황</a></li>
+								<li><a href="./sub1_5.html">오시는길</a></li>
+							</ul>
 						</li>
 						<li>
-							<a href="./sub2.html">조합원사</a>
+							<a href="./sub2.html" class="menu">조합원사</a>
+							<ul class="acodian">
+								<li><a href="./sub2.html">조합원사 현황</a></li>
+								<li><a href="./sub2_2.html">가입안내</a></li>
+								<li><a href="./sub2_3.html">조합원사 소식</a></li>
+							</ul>
 						</li>
 						<li>
-							<a href="./sub3.html">정보광장</a>
+							<a href="./sub3.html" class="menu">정보광장</a>
+							<ul class="acodian">
+								<li><a href="./sub3.html">공지사항</a></li>
+								<li><a href="./sub3_2.html">자료실</a></li>
+								<li><a href="./sub3_3.html">관련법령</a></li>
+							</ul>
 						</li>
 						<li>
-							<a href="./sub4.html">사업정보</a>
+							<a href="./sub4.html" class="menu">사업정보</a>
+							<ul class="acodian">
+								<li><a href="./sub4.html">주요사업</a></li>
+								<li><a href="./sub4_2.html">단체표준</a></li>
+								<li><a href="./sub4_3.html">공동상표</a></li>
+								<li><a href="./sub4_4.html">중소기업제품 공공구매제도 소개</a></li>
+								<li><a href="./sub4_5.html">공공구매 안내</a></li>
+							</ul>
 						</li>
 						<li>
 							<a href="#">인트라넷</a>
